syntax = "proto3";

package onight.zjfae.afront.gensazj;

option java_outer_classname="ADPictureProtoBuf";
//Generated By BrewRobot:Wed Sep 06 14:53:46 CST 2017

message PBAPP_ads_picture{
	//
	message AdsPicture{
		string uuid = 1;	 //,uuid,Long,不校验,是,
		string iconsName = 2;   //,图标名称,String,不校验,是,
		string funcIcons = 3;	 //,图片地址,String,不校验,是,
		string funcUrl = 4;	 //,链接地址,Long,不校验,是,
		string showType = 5;	 //,显示类型,String,不校验,是,
		string status = 6;	 //,状态,Long,不校验,是,
		string isShare = 7;	 //,是否分享,Long,不校验,是,
		string shareIsSure = 8;	 //,分享是否内管配置,Long,不校验,是,
		string shareTitle = 9; //,分享标题
		string shareStrparam = 10; //,分享内容
		string shareItem = 11; //,分享选项 0-链接,1-图片,2-图片二维码
		string sharePicUrl = 12;//,分享图片地址
		string shareUrl = 13;//,分享链接地址
		string intervalSwitch = 14;	 //,角标是否开启,Long,不校验,是,
		string intervalSecond = 15;	 //,轮休时间（秒）,Long,不校验,是,
		string messcountUrl = 16;	 //,角标轮休地址,Long,不校验,是,
		string iconsWeights = 17;	 //,图标权重,String,不校验,是,
		string iconsLocation = 18;	 //,图标位置顺序,String,不校验,是,
		string keyword = 19;	 //,关键字,String,不校验,是,
		string linkKeywordName = 20;	 //,链接关键字名称,String,不校验,是,
		string jumpRule = 21;	 //,内部跳转,String,不校验,是,
		string startUpTime = 22;	 //,广告缺计时数,String,不校验,是,
	}


	string showType = 1; //,显示类型,String,不校验,是,

	string resTime = 2; //,返回时间,String,不校验,是,

	string upgradeDate = 3;//当天日期

	string isUpgrade = 4;//本月是否升级: 1 - 当月有升级,0 - 当月无升级

	string isDefault = 5; //是否默认图片类型

	string userTypeStr = 6; //用户类型串

	repeated AdsPicture adsPicture = 7;



}

message Ret_PBAPP_ads_picture{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_ads_picture data=3;


}

message REQ_PBAPP_ads_picture{
	//

	string show_type = 1; //,显示类型(0:启动页广告，1:首页显示广告，2:登录时候显示),String,不校验,否,


}